made sidenav buttons look better, fixed layout issue on cam-components display

--- a/app/app.less
+++ b/app/app.less
@@ -191,51 +191,18 @@ md-list.md-dark-secondary-theme {
 }
 
 .menu-item {
-    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
-    cursor: pointer;
-    //    color: #757575;
-    height: 48px;
-    width: 100%;
-    padding-left: 24px;
-
-    button {
-        margin-left: 24px;
-        background-color: transparent;
-        border-width: 0;
-        display: block;
-        font-size: 13px;
-        font-weight: bold;
+    .md-button {
+        text-align: start;
+        margin: 0;
     }
 
-    span {
-        width: 27px;
-        font-size: 20px;
-        text-align: center;
-    }
-
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-
-        span {
-            //            font-size: 32px;
-        }
-
-        button {
-            //            background-color: #F5F5F5;
-        }
-    }
-
-    &:active {
-        //        background-color: #E0E0E0;
-
-        button {
-            //            background-color: #E0E0E0;
-        }
+    .fa {
+        margin: 0 8px;
     }
 }
 
 .menu-item-indented {
-    padding-left: 42px;
+    padding-left: 24px;
 }
 
 .menu-item-divider {
